package logic.commands;

public interface ICommand {
   void invoke();
}
