package logic.commands;

public interface IUndoable {
   void undo();
   void redo();
}