package logic.dragstrategy;

import java.awt.Point;

public interface IDragStrategy {
    void endDrag(Point p);
}
