package logic.observer;

public interface IRetriggerable {
    void retrigger();
}
